<resources>
    <string name="app_name">Bakiliya</string>
    <string name="LogoIconScreen">Logo Icon Screen</string>
    <string name="e_mail">E-mail:</string>
    <string name="digite_o_e_mail">Digite o e-mail:</string>
    <string name="digite_a_senha">Digite a senha:</string>
    <string name="senha">Senha:</string>
    <string name="esqueci_a_senha">Esqueci a senha!</string>
    <string name="criar_conta">Criar conta!</string>
    <string name="conectar">Conectar</string>
    <string name="escolha_o_tipo_de_cadastro">Escolha o tipo de cadastro:</string>
    <string name="para_empresa">Para empresa</string>
    <string name="para_pessoa">Para pessoa</string>
    <string name="j_tem_conta">Já tem conta!</string>
    <string name="nome_fantasia">Nome fantasia:</string>
    <string name="digite_o_nome_da_empresa">Digite o nome da empresa:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="cep">CEP:</string>
    <string name="digite_o_cep_da_empresa">Digite o CEP da empresa:</string>
    <string name="espaco_Vazio" />
    <string name="dados_do_cep">Dados do cep:</string>
    <string name="ver_mais">ver mais…</string>
    <string name="ver_menos">ver menos…</string>
    <string name="informa_es_do_cep">Informações do CEP…</string>
    <string name="repetir_senha">Repetir senha:</string>
    <string name="digite_a_senha_novamente">Digite a senha novamente:</string>
    <string name="digite_o_cnpj_da_empresa">Digite o CNPJ da empresa:</string>
    <string name="digite_o_e_mail_da_empresa">Digite o e-mail da empresa:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome:</string>
    <string name="digite_o_seu_nome">Digite o seu nome:</string>
    <string name="cpf">CPF:</string>
    <string name="digite_o_seu_cpf">Digite o seu CPF:</string>
    <string name="digite_o_seu_e_mail">Digite o seu e-mail:</string>
    <string name="digite_o_seu_cep">Digite o seu cep:</string>
    <string name="adicinar_cliente">Adicinar Cliente:</string>
    <string name="cliente_empresa">Cliente empresa</string>
    <string name="cliente_pessoa">Cliente pessoa</string>
    <string name="nome_seja_bem_vindo">Nome, seja bem vindo!</string>
    <string name="ajustesicon">AjustesIcon</string>
    <string name="deseja_realmente_deletar_o_cliente">Deseja realmente deletar o cliente?</string>
    <string name="sim">SIM</string>
    <string name="n_o">Não</string>
    <string name="n_mero_na_rua">Número na rua:</string>
    <string name="digire_o_n_mero_da_empresa">Digite o número da empresa:</string>
    <string name="digite_o_n_mero">Digite o número:</string>
    <string name="adicionar">Adicionar</string>
    <string name="por_seguran_a_n_o_possivel_editar_clieten">(por segurança não é possivel editar clieten)</string>
    <string name="erro_login">Houve um erro no login!!!</string>
    <string name="h_algum_campo_em_branco_nverifique_os_campos_e_tente_novamente">Há algum campo em branco!\nVerifique os campos e tente novamente!</string>
    <string name="ok">OK</string>
    <string name="o_endere_o_de_e_mail_fornecido_inv_lido_ntente_novamente">O endereço de e-mail fornecido é inválido!\nTente novamente!</string>
    <string name="senha_inv_lida_ntente_novamente_ou_clique_em_esqueci_a_senha">Senha inválida!\nTente novamente ou clique em \'ESQUECI A SENHA!</string>
    <string name="endere_o_de_e_mail_n_o_est_cadastrado_ntente_criar_uma_conta">Endereço de e-mail não está cadastrado!!\nTente criar uma conta!</string>
    <string name="erro_ao_relizar_o_login">Erro ao relizar o login!</string>
    <string name="erro_recSenha">Erro ao recuperar senha!</string>
    <string name="o_campo_de_e_mail_est_em_branco">O campo de e-mail está em branco!</string>
    <string name="o_endere_o_de_e_mail_est_mal_formatado">O endereço de e-mail está mal formatado!</string>
    <string name="n_o_foi_possivel_enviar_e_mail_de_recupera_o_de_senha">Não foi possivel enviar e-mail de recuperação de senha!</string>
    <string name="sucesso_ao_recuperar_senha">Sucesso ao recuperar senha!</string>
    <string name="foi_enviado_um_e_mail_para_recuperar_a_senha_nverifica_a_caixa_de_spam_caso_necess_rio">Foi enviado um e-mail para recuperar a senha!\nVerifica a caixa de SPAM caso necessário!</string>
    <string name="houve_um_erro_para_cadastrar_a_empresa">Houve um erro para cadastrar a empresa!</string>
    <string name="a_senha_digitada_muito_curta">A senha digitada é muito curta!</string>
    <string name="as_senhas_fornecidas_s_o_diferentes">As senhas fornecidas são diferentes!</string>
    <string name="o_endere_o_de_email_est_mal_formatado">O endereço de email está mal formatado!</string>
    <string name="o_e_mail_fornecido_j_est_cadastrado">O e-mail fornecido já está cadastrado!</string>
    <string name="erro_ao_realizar_cadastro">Erro ao realizar cadastro!</string>
    <string name="o_cnpj_fornecido_inv_lido_ndeve_estar_no_seguinte_formato_nxx_xxx_xxx_0001_xx">O cnpj fornecido é inválido!\nDeve estar no seguinte formato:\nXX.XXX.XXX/0001-XX</string>
    <string name="o_cep_fornecido_inv_lido_ndeve_estar_no_seguinte_formato_nxxxxx_xxx">O cep fornecido é inválido!\nDeve estar no seguinte formato:\nXXXXX-XXX</string>
    <string name="cep_n_encontrado">O cep fornecido não foi encontrado!</string>
    <string name="o_cpf_fornecido_inv_lido_ndeve_estar_no_seguinte_formato_nxxx_xxx_xxx_xx">O cppf fornecido é inválido!\nDeve estar no seguinte formato:\XXX.XXX.XXX-XX</string>
    <string name="houve_um_erro_para_cadastrar_a_pessoa">Houve um erro para cadastrar a pessoa!</string>
    <string name="Ajustes_Opcoes">Ajustes / Opções:</string>
    <string name="logout">Logout</string>
    <string name="fechar_aplicativo">Fechar aplicativo</string>
    <string name="deletar_conta">Deletar conta</string>
    <string name="houve_um_erro_para_deletar_conta">Houve um erro para deletar conta!</string>
    <string name="tente_novamente">Tente novamente!</string>
    <string name="contato">Contato:</string>
    <string name="digite_o_contato_da_empresa">Digite o contato da empresa:</string>
    <string name="digite_o_contato">Digite o contato:</string>
    <string name="houve_um_erro_ao_adicionar_cliente_do_tipo_empresa">Houve um erro ao adicionar cliente do tipo empresa!</string>
    <string name="houve_um_erro_ao_adicionar_cliente_do_tipo_pessoa">Houve um erro ao adicionar cliente do tipo pessoa!</string>
    <string name="n_o_possivel_visualizar_cliente">Não é possivel visualizar cliente!</string>
    <string name="cliente_ja_foi_apagado_ou_seja_n_o_possivel_visualizar_os_seus_dados">Cliente ja foi apagado, ou seja, não é possivel visualizar os seus dados!</string>
    <string name="digite_o_nome_do_cliente">Digite o nome do cliente:</string>
    <string name="digite_o_cep_do_cliente">Digite o CEP do cliente:</string>
    <string name="digite_o_e_mail_do_cliente">Digite o E-mail do cliente:</string>
    <string name="digite_o_cpf_do_cliente">Digite o CPF do cliente:</string>
    <string name="reconectar">Reconectar</string>
    <string name="sem_conex_o">Sem conexão!</string>
    <string name="verifique_a_internet_e_clique_em_reconectar">Verifique a conexão e clique em reconectar</string>
</resources>