<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.DayNight"
    tools:context=".Register_Empresa">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_sem_fundo"
                android:layout_gravity="center"
                android:contentDescription="@string/LogoIconScreen"/>

            <TextView
                android:layout_marginTop="-25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_fantasia"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input_NomeFantasia_RegisterEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_o_nome_da_empresa"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="24sp"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnpj"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input_CNPJ_RegisterEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_o_cnpj_da_empresa"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="24sp"
                    android:inputType="number"
                    android:digits="1234567890./-"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input_Email_RegisterEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_o_e_mail_da_empresa"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="24sp"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cep"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input_CEP_RegisterEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_o_cep_da_empresa"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="24sp"
                    android:inputType="number"
                    android:digits="1234567890-"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dados_do_cep"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/TextView_DadosCEP_RegisterEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/informa_es_do_cep"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Button_VerMais_RegisterEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/ver_mais"
                android:background="@android:color/transparent"
                android:textStyle="italic"
                android:textColor="@drawable/btn_link"
                android:textSize="16sp"
                android:layout_gravity="end"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_mero_na_rua"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input_Numero_RegisterEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digire_o_n_mero_da_empresa"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="24sp"
                    android:inputType="number"
                    android:digits="1234567890abcd"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input_Senha_RegisterEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_a_senha"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="24sp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetir_senha"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input_RSenha_RegisterEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_a_senha_novamente"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="24sp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Button_Cadastrar_RegisterEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/cadastrar"
                android:textStyle="bold|italic"
                android:textSize="22sp"
                android:background="@drawable/btn_principal"
                android:textColor="@drawable/btn_principal"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/Button_JtConta_RegisterEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/j_tem_conta"
                android:background="@android:color/transparent"
                android:textStyle="bold|italic"
                android:textColor="@drawable/btn_link"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espaco_Vazio"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>